--- a/m1/00-projeto-individual/assets/src/css/componentes/componentes.css
+++ b/m1/00-projeto-individual/assets/src/css/componentes/componentes.css
@@ -1,5 +1,14 @@
-.container {
+/* .container {
   max-width: 1200px;
   padding: 20px 20px;
   margin: 0 auto;
+} */
+
+.button {
+  display: inline-block;
+  width: 280px;
+  background: var(--cor-p3);
+  padding: 8px 16px;
+  text-align: center;
+  border-radius: 20px 0 20px 0;
 }
