--- a/m1/00-projeto-individual/assets/src/css/global/global.css
+++ b/m1/00-projeto-individual/assets/src/css/global/global.css
@@ -3,14 +3,16 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  text-decoration: none;
+  overflow-x: hidden;
 }
 
 html {
   font-size: 16px;
+  margin-bottom: 500px;
 }
 
 a {
-  text-decoration: none;
   color: inherit;
 }
 
