--- a/m1/00-projeto-individual/assets/src/css/componentes/componentes.css
+++ b/m1/00-projeto-individual/assets/src/css/componentes/componentes.css
@@ -1,9 +1,3 @@
-/* .container {
-  max-width: 1200px;
-  padding: 20px 20px;
-  margin: 0 auto;
-} */
-
 .button {
   display: inline-block;
   width: 280px;
@@ -11,4 +5,5 @@
   padding: 8px 16px;
   text-align: center;
   border-radius: 20px 0 20px 0;
+  box-shadow: 2px 2px 4px var(--wb-12);
 }
