feat: details-aboud & hobbies

--- a/m1/00-projeto-individual/assets/src/css/global/global.css
+++ b/m1/00-projeto-individual/assets/src/css/global/global.css
@@ -25,3 +25,10 @@ img {
   height: auto;
   display: block;
 }
+
+/* Container */
+.container {
+  display: flex;
+  justify-content: center;
+  height: 947px;
+}
