--- a/m1/00-projeto-individual/assets/src/css/hobbies/hobbies.css
+++ b/m1/00-projeto-individual/assets/src/css/hobbies/hobbies.css
@@ -10,3 +10,10 @@
   background: var(--cor-p3);
   border-radius: 0 120px 0 120px;
 }
+
+/* Flower */
+.hobbies-flower {
+  position: absolute;
+  top: 120rem;
+  right: 20px;
+}
