--- a/m2/conversor/src/css/global.css
+++ b/m2/conversor/src/css/global.css
@@ -7,7 +7,7 @@
 body {
   background: #000;
   font-family: monospace;
-  max-width: 400px;
+  max-width: 420px;
   margin: 100px auto;
 }
 
@@ -15,13 +15,11 @@ body {
   max-width: 1200px;
 }
 
-.formulario {
-  display: flex;
-  flex-direction: column;
-  background: #fff;
-  padding: 100px;
+select,
+input {
+  width: 100%;
 }
 
-.formulario form div {
-  margin-bottom: 20px;
+input:focus {
+  background: #fff;
 }
