--- a/m2/conversor/src/css/style.css
+++ b/m2/conversor/src/css/style.css
@@ -1,2 +1,3 @@
-@import url(global.css);
+/* imports realizado dos outros arquivos css */
+@import url(global/global.css);
 @import url(pages/index.css);
